[package]
name = "nemuibot-discord"
version = "0.1.0"
authors = ["sasuseso <sinai471530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "framework", "model", "cache", "standard_framework"] }
tokio = { version = "0.2" }
#tokio = { version = "0.3.4", features = ["macros", "rt", "rt-multi-thread"] }
